Change name and default keys for Windows

--- a/options/options.css
+++ b/options/options.css
@@ -1,7 +1,7 @@
 body {
     padding: 10px;
     background-color: #3b5998;
-    font-family: "Lucida Grande";
+    font-family: "Tahoma";
 }
 
 h1 {
